--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -69,8 +69,17 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 
 
+button[role=tab] {
+  background-color: white !important;
+  font-size: x-large;
+  font-weight: bold;
+  color: $blue3;
+}
 
+button[role=tab].active {
+  background-color: $blue3 !important;
 
+}
 
 
 
