added links + membership application

--- a/_includes/membership_section.html
+++ b/_includes/membership_section.html
@@ -13,4 +13,14 @@
 </table>
 <p>Alles, was Ihre Mitgliedschaft betrifft (Vereinsbeitritt, Änderung, Kündigung etc.) senden Sie bitte direkt an die Email-Adresse (unter „Kontakte“) oder geben es direkt im Kneipp Treff ab (während der Öffnungszeiten oder in Postkasten). Der Austritt kann nur zum Ende eines Geschäftsjahres unter Einhaltung einer dreimonatigen Kündigungsfrist erklärt werden.
 </p>
+<div class="container-fluid d-flex align-items-end justify-content-center mt-5">
+    <div class="row" style="max-width: 1150px;">
+        <div class="col">
+            <center class="mb-3">
+                <a href="/assets/documents/beitrittserklaerung.pdf" target="_blank" class="btn button1 btn-lg d-flex justify-content-center" role="button" style="min-width: 350px;"><i class="fs-2 ph-bold ph-file-pdf"></i>&#8194; Die Beitrittserklärung als PDF</a>
+            </center>
+        </div>
+    </div>
+</div>
+
 </div>
