--- a/_includes/courses_section.html
+++ b/_includes/courses_section.html
@@ -1,17 +1,98 @@
-<div class="container">
-  
-<div class="container-fluid d-flex align-items-end justify-content-center mt-5 mb-5">
-    <div class="row" style="max-width: 1150px;">
-        <div class="col">
-            <center class="mb-3">
-                <a href="/assets/documents/kurse_2026_1.pdf" target="_blank" class="btn button1 btn-lg d-flex justify-content-center" role="button" style="min-width: 350px;"><i class="fs-2 ph-bold ph-file-pdf"></i>&#8194; Unser aktuelles Kursprogramm als PDF</a>
-            </center>
+<div class="container-fluid d-flex align-items-end justify-content-center">
+
+<div class="row g-5">
+    <div class="col-9">
+        <div class="container-fluid d-flex align-items-end justify-content-center mt-5 mb-5">
+            <div class="row" style="max-width: 1100px;">
+                <div class="col">
+                    <center class="mb-3">
+                        <a href="/assets/documents/kurse_2026_1.pdf" target="_blank" class="btn button1 btn-lg d-flex justify-content-center" role="button" style="min-width: 350px;"><i class="fs-2 ph-bold ph-file-pdf"></i>&#8194; Unser aktuelles Kursprogramm als PDF</a>
+                    </center>
+                </div>
+            </div>
         </div>
+        
+
+
+
+        
+        
+        <p><b>Legende für Ortsbezeichnungen:</b><br>K - Kneipp Treff<br>GH - Gymnastikhalle über dem Stadtbad<br>SB - Stadtbad<br>RB - Realschulbad</p>
+            <center class="container mb-5">
+                <table>
+                <tr>
+                    <th>Wochentag</th>
+                    <th>Was</th>
+                    <th>Wann</th>
+                    <th>Wie lange<br>& ab wann</th>
+                    <th>Wo</th>
+                    <th>Wie viel €<br>(Mitglieder/Gäste)</th>
+                    <th>Wer</th>
+                </tr>
+                {% for day in site.data.courses %}
+                    {% assign mod = forloop.index0 | modulo:2 %}
+                    {% for item in day.courses %}
+                    {% if mod == 1 %}
+                        <tr>
+                    {% else %}
+                        <tr style="background-color: #eee;">
+                    {% endif %}
+                        {% if forloop.index == 1 %}
+                            <td rowspan="{{ day.courses.size }}">{{ day.day }}</td>
+                        {% endif %}
+                        <td>
+                            <b>{{ item.name }}</b>
+                            {% if item.comment %}
+                                <br>{{ item.comment }}
+                            {% endif %}
+                        </td>
+                        <td>{{ item.slot }}</td>
+                        <td>{{ item.duration }}<br>{{ item.start }}</td>
+                        <!-- <td>{{ item.place }}</td> -->
+                        <td>{{ item.place_short }}</td>
+                        <td>{{ item.price.member }} / {{ item.price.guest }}</td>
+                        <td>
+                            {% for trainer in item.trainers %}
+                                {{ trainer.name }}<br>{{ trainer.contact }}<br>
+                            {% endfor %}
+                        </td>
+                    {% endfor %}
+                    </tr>
+                {% endfor %}
+                </table> 
+            </center>
+    </div>
+    <div class="col-3 mt-5">
+        <center class="mb-5"><img src="/assets/images/trainers/maier_herbert_hanni.jpg" alt="" style="width: 100%;"><p>Hanni & Herbert Maier</p></center>
+        <center class="mb-5"><img src="/assets/images/trainers/schmid_claudia.jpg" alt="" style="width: 100%;"><p>Claudia Schmidt</p></center>
+        <center class="mb-5"><img src="/assets/images/trainers/thieme_susanne.png" alt="" style="width: 100%;"><p>Susanne Thieme</p></center>
+        <center class="mb-5"><img src="/assets/images/trainers/woller_angelika.png" alt="" style="width: 100%;"><p>Angelika Woller</p></center>
     </div>
 </div>
-  
 
-      <center class="mb-5">
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <!-- <center class="mb-5">
         <table>
           <tr style="border-bottom: solid black 1px;">
             <th style="min-width: 300px;">Übungsleiterinnen & -leiter</th>
@@ -35,53 +116,4 @@
         </table> 
       </center>
 
-
-
- 
- 
- <!-- <p>Orte:<br>K - Kneipp Treff<br>GH - Gymnastikhalle über dem Stadtbad<br>SB - Stadtbad<br>RB - Realschulbad</p> -->
-    <center class="mb-5">
-        <table>
-          <tr>
-            <th style="min-width: 140px;">Wochentag</th>
-            <th style="min-width: 140px;">Was</th>
-            <th style="min-width: 140px;">Wann</th>
-            <th style="min-width: 140px;">Wie lange<br>& ab wann</th>
-            <th style="min-width: 140px;">Wo</th>
-            <th style="min-width: 140px;">Wie viel €<br>(Mitglieder/Gäste)</th>
-            <th style="min-width: 160px;">Wer</th>
-          </tr>
-          {% for day in site.data.courses %}
-            {% assign mod = forloop.index0 | modulo:2 %}
-            {% for item in day.courses %}
-            {% if mod == 1 %}
-                <tr style="height:40px;">
-            {% else %}
-                <tr style="height:40px; background-color: #eee;">
-            {% endif %}
-                {% if forloop.index == 1 %}
-                    <td rowspan="{{ day.courses.size }}">{{ day.day }}</td>
-                {% endif %}
-                <td>
-                    <b>{{ item.name }}</b>
-                    {% if item.comment %}
-                        <br>{{ item.comment }}
-                    {% endif %}
-                </td>
-                <td>{{ item.slot }}</td>
-                <td>{{ item.duration }}<br>{{ item.start }}</td>
-                <td>{{ item.place }}</td>
-                <!-- <td>{{ item.place_short }}</td> -->
-                <td>{{ item.price.member }} / {{ item.price.guest }}</td>
-                <td>
-                    {% for trainer in item.trainers %}
-                        {{ trainer.name }}<br>{{ trainer.contact }}<br>
-                    {% endfor %}
-                </td>
-            {% endfor %}
-            </tr>
-          {% endfor %}
-        </table> 
-    </center>
-
-</div>
+ -->
