--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -171,9 +171,9 @@ ol ol {
 
 
 
-table {
-  border-collapse: collapse;
-}
+// table {
+//   border-collapse: collapse;
+// }
 
 table, th, td {
   border: 1px solid;
